# Hedge-v3

./: .gitignore  CHANGELOG.md  README.md
cli/: CHANGELOG.md  Cargo.toml  README.md  config.template.toml
cli/src/: cli.rs  main.rs
cli/src/command/: app.rs  apply.rs  channel.rs  import.rs  mod.rs  server.rs  source_data.rs  tool.rs
cli/src/module/: channel.rs  config.rs  connect.rs  import.rs  local_data.rs  mod.rs  server.rs
cli/src/module/api/: bulk.rs  folder.rs  log.rs  mod.rs  setting.rs  source_data.rs
cli/src/module/download/: mod.rs  sankakucomplex.rs
cli/src/utils/: error.rs
client/: .env.development  args.sh  package.json  tsconfig.json  vite.config.ts
client/src/: application.ts  main.ts  vite-env.d.ts
client/src/application/: application.ts  event.ts  menu.ts  protocol.ts  theme.ts  window.ts
client/src/constants/: file.ts
client/src/exceptions/: index.ts
client/src/utils/: emitter.ts  fs.ts  migrations.ts  net.ts  notification.ts  parameters.ts  process.ts  (+3 more)
crx/: CHANGELOG.md  README.md  manifest.config.ts  manifest.json  options.html  package.json  popup.html  side-panel.html  tsconfig.json  vite.config.ts
crx/src/: background.tsx  options.tsx  popup.tsx  side-panel.tsx
frontend/: .env.development  LINT.md  index.html  package.json  package.md  shims.d.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  routes.ts  vite-env.d.ts
server/: build.gradle.kts  build_remote_image.sh  build_vm_image.sh  run_image_diff_validator.sh  settings.gradle.kts
server/docker/: Dockerfile  build.sh  docker-compose.yml  start.sh
(+1235 files in other folders)
